Revision history for Perl module Perl::Dist

0.53 Sun 24 Dec 2007
	- Adding support for websites in the start menu entries
	- Adding support for .bat launchers in the start menu
	- Completed Strawberry Perl 5.10.0 using this version

0.52 Thu 20 Dec 2007
        - Adding an additional install flag to prevent
          installation to the old directory.

0.51 Wed 19 Dec 2007
	- Hard-code in the path to Perl 5.10.0 final
	- Move default environment vars from ::Script to ::Inno
	- Add share to no_index to prevent 5.8.8 overwritten
	  modules being listed on search.cpan.org

0.50 Wed 19 Dec 2007
	- Merging in Perl::Dist::Vanilla
	- Merging in Perl::Dist::Bootstrap
	- Added Perl::Dist::Util::Toolchain
	- Dynamically generate the distribution list
	- Clean up the shared files
	- Bug fixing and repairing perldist
	- Completed generation of exe releases

0.30 Sun 18 Nov 2007
	- Adding support for Perl 5.10.0
	- Adding support for zlib
	- Adding support for bzlib2
	- Adding support for iconv
	- Adding support for libxml2
	- Adding support for SQLite
	- Completing generation of zip releases

0.29_03 Fri  9 Nov 2007
	- Completing install_perl_588
	- Completing install_distribution
	- Completing install_module
	- Adding install_library
	- Adding install_libraries
	- Completing installation of zlib
	- Starting installation of iconv
	- Adding pexports to the list of binaries to install

0.29_02 Thu 31 Oct 2007
        - Adding install_file support for tweaking stuff
          post-installation of binaries/perl/dists/etc
        - Removed post_copy and replaced with install_file
        - Renamed pre_copy to patch since it makes more sense
          that way now.

0.29_01 Wed 31 Oct 2007
	- Experimental release, only intended for review
	- Huge refactoring
	
0.10  Fri 19 Oct 2007
        - Converting from config-driver to code-driven
        - Implementing data classes for Inno
        - Implementing data classes for "Assets"